# store_tdd_api

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
store/: main.py  routers.py
store/controllers/: product.py
store/core/: exceptions.py
store/db/: mongo.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
